# ai4qxy

./: README.md  docker-compose.yaml  pyproject.toml
data/: qxy-all.txt
src/: 1.py  2.py  3.py  3build.py  4.py  4insert.py  5query.py  init.py
