[project]
name = "ai4qxy"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "landryliang", email = "landryliang@xiaoe-tech.com"},
]
dependencies = [
    "langchain[docarray]>=0.1.13",
    "requests>=2.31.0",
    "langchain-openai>=0.1.1",
    "langchain-community>=0.0.29",
    "towhee==1.0.0",
    "install>=1.3.5",
    "towhee-models>=1.1.3",
    "setuptools>=69.2.0",
    "torch>=2.2.2",
    "transformers>=4.39.2",
    "sentence-transformers>=2.6.1",
    "docarray==0.32.1",
    "pydantic==1.10.14",
    "pymilvus>=2.4.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
